--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -14,7 +14,7 @@
 //body
 body {
     background-color: $Violet;
-    background-image: url("![Alt text here]/images/bg-desktop.svg");
+    background-image: url("/images/bg-desktop.svg?sanitize=true");
     background-size: cover;
     background-repeat: no-repeat;
     font-weight: bodyWeight(bold);
