updated sass file

--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -14,7 +14,7 @@
 //body
 body {
     background-color: $Violet;
-    background-image: url("/images/bg-desktop.svg?internal");
+    background-image: url("/images/illustration-mockups.svg");
     background-size: cover;
     background-repeat: no-repeat;
     font-weight: bodyWeight(bold);
