updated the $Heading-Font-Weights

--- a/SASS/_variables.scss
+++ b/SASS/_variables.scss
@@ -2,7 +2,7 @@ $Violet: hsl(257, 40%, 49%);
 $SoftMagenta: hsl(300, 69%, 71%);
 $White: #fff;
 //Headings
-$Heading-Font-Weights: ( "regular": 400, "semi-bold": 600);
+$Heading-Font-Weights: ( "thin":100, "regular": 400, "semi-bold": 600);
 //Body
 $Body-Font-Weight: 400;
-$Mobile: 375px;
+$Mobile: 425px;
