--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -22,7 +22,7 @@
 body {
     background-color: $Violet;
     background-image: url("../../images/bg-desktop.svg"); //background-image
-    background-size: cover;
+    background-size: 100%;
     background-repeat: no-repeat;
     font-weight: bodyWeight(bold);
     font-family: 'Poppins', sans-serif;
@@ -31,8 +31,8 @@ body {
     /*Header Logo*/
     header {
         img {
-            width: 12rem;
-            margin: 0 5em;
+            width: 14rem;
+            margin: 0.5rem 5em;
             padding: 2.5em 0;
             font-size: 1em;
         }
@@ -41,17 +41,17 @@ body {
     //Main Content
     main {
         @include flexCenter(row);
-        margin: 0 5rem;
+        margin: 0 2rem;
         color: $White;
         /******************/
         //Mock-up image
         img {
-            margin-top: 5.9rem;
-            margin-left: 7.5rem;
+            margin-top: 2.5rem;
+            margin-left: 0.3rem;
         }
         div {
-            margin-left: 5rem;
-            margin-bottom: 10rem;
+            margin-left: 2rem;
+            margin-bottom: 1rem;
             font-weight: $Body-Font-Weight;
             /********************/
             //Heading
@@ -63,6 +63,7 @@ body {
             p {
                 padding-top: 1.5em;
                 font-weight: weight(regular);
+                font-size: 0.9em;
             }
             .small-screen {
                 display: none;
@@ -80,7 +81,7 @@ body {
                 transition: all 0.3s ease 0s;
                 width: 14.3rem;
                 outline: none;
-                padding: 20px 15px;
+                padding: 18px 15px;
                 margin: 20px 0;
                 overflow: hidden;
                 &:hover {
@@ -94,16 +95,19 @@ body {
     /***************/
     /*Footer*/
     footer {
-        margin-top: 8rem;
+        margin-top: 3.5rem;
+        .social-links {
+            margin: 0.1rem 0;
+        }
         div {
             text-align: right;
             a:link {
                 text-decoration: none!important;
             }
             i {
-                margin: 0.5rem;
+                margin: 0.1rem;
                 padding: 0.8em 1em;
-                font-size: 1rem;
+                font-size: 0.8rem;
                 color: $White;
                 border: 1px solid $White;
                 border-radius: 50%;
@@ -118,7 +122,7 @@ body {
             }
         }
         .attribution {
-            font-size: 11px;
+            font-size: 8px;
             text-align: center;
         }
         .attribution a {
@@ -398,8 +402,8 @@ body {
             div {
                 i {
                     margin: 0.2rem;
-                    padding: 0.6em 0.7em;
-                    font-size: 0.8em;
+                    padding: 0.6em 0.8em;
+                    font-size: 0.9em;
                 }
             }
             .attribution {
